# PipeLINES

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: pr_checks.yml
pipelines/bak_serialization_distribution/: Makefile  pipeline.json  pyproject.toml
pipelines/bak_serialization_distribution/src/bak_serialization_distribution/: __init__.py  config.py
pipelines/bak_serialization_distribution/src/bak_serialization_distribution/entrypoints/: latest_zip_file.py  serialize_content.py  unload_bak_to_sql.py
pipelines/bak_unloading/: Makefile  pipeline.json  pyproject.toml
pipelines/bak_unloading/src/bak_unloading/: __init__.py  config.py
pipelines/bak_unloading/src/bak_unloading/entrypoints/: delete_temp_folder_content.py
pipelines/dataset_provisioning/: Makefile  dataset_provisioning.py  pipeline.json
pipelines/generic_pipeline/: MANIFEST.in  Makefile  pipeline.json  pyproject.toml
pipelines/generic_pipeline/src/generic_pipeline/: __init__.py  common_exceptions.py  common_types.py  config.py  datalake.py  db.py  table_classification.py
pipelines/generic_pipeline/src/generic_pipeline/entrypoints/: cleaning_step.py  feature_extraction.py  ingestion.py  pseudonymisation.py
pipelines/generic_pipeline/src/generic_pipeline/stages/: ingestion.py
pipelines/generic_pipeline/src/generic_pipeline/stages/feature_extraction/: scispacybr.py  transform.py
pipelines/generic_pipeline/src/generic_pipeline/stages/pseudonymisation/: presidio.py  transform.py
pipelines/generic_pipeline/src/generic_pipeline/tests/: conftest.py  helpers.py  test_datalake.py  test_db.py
pipelines/generic_pipeline/src/generic_pipeline/tests/stages/: test_end_to_end.py  test_feature_extraction.py  test_ingestion.py  test_pseudonymisation.py
pipelines/rio_pipeline/: Makefile  pipeline.json  pyproject.toml
pipelines/rio_pipeline/src/rio_pipeline/: __init__.py  common_types.py  config.py  datalake.py  db.py
pipelines/rio_pipeline/src/rio_pipeline/entrypoints/: cleaning_step.py  feature_extraction.py  ingestion.py  pseudonymisation.py
pipelines/rio_pipeline/src/rio_pipeline/stages/: ingestion.py
pipelines/rio_pipeline/src/rio_pipeline/stages/feature_extraction/: scispacybr.py  transform.py
pipelines/rio_pipeline/src/rio_pipeline/stages/pseudonymisation/: presidio.py  transform.py
pipelines/rio_pipeline/src/rio_pipeline/tests/: conftest.py  helpers.py  test_datalake.py
pipelines/rio_pipeline/src/rio_pipeline/tests/stages/: test_end_to_end.py  test_feature_extraction.py  test_ingestion.py  test_pseudonymisation.py
